[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/VSliderWithPanel.gd" type="Script" id=1]

[node name="VSlider" type="VSlider"]
margin_left = 171.0
margin_right = 187.0
margin_bottom = 176.0
mouse_default_cursor_shape = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 29.0
margin_top = 64.0
margin_right = 109.0
margin_bottom = 104.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 80.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_right = 80.0
margin_bottom = 14.0

[node name="title_label" type="Label" parent="Panel/VBoxContainer/CenterContainer"]
margin_left = 11.0
margin_right = 69.0
margin_bottom = 14.0
text = "Difficulté"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 32.0

[node name="value_label" type="Label" parent="Panel/VBoxContainer/CenterContainer2"]
margin_left = 11.0
margin_right = 69.0
margin_bottom = 14.0
text = "Difficulté"
align = 1

[connection signal="mouse_entered" from="." to="." method="_on_VSlider_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_VSlider_mouse_exited"]
[connection signal="value_changed" from="." to="." method="_on_VSlider_value_changed"]
